icons added, small fixes with colors and design

--- a/index.html
+++ b/index.html
@@ -10,28 +10,37 @@
 
     <div class="container">
         <div class="sidebar"> 
+            <img src="images/sidebar/view-grid-outline.svg" alt="">
             <div class="logo"> Dashboard </div>
-            <br>
-            <ul>
-                <li> Home </li>
-                <li> Profile </li>
-                <li> Messages </li>
-                <li> History </li>
-                <li> Tasks </li>
-                <li> Communities </li>
-            </ul>
-            <br>
-            <ul>
-                <li> Settings </li>
-                <li> Support </li>
-                <li> Privacy </li>
-            </ul>
+            
+                <img src="images/sidebar/home.svg" alt="">
+                <p> Home </p>
+                <img src="images/sidebar/card-account-details-outline.svg" alt="">
+                <p> Profile </p>
+               <img src="images/sidebar/message-text-outline.svg" alt="">
+                <p> Messages </p>
+                <img src="images/sidebar/history.svg" alt="">
+                <p> History </p>
+                <img src="images/sidebar/note-multiple-outline.svg" alt="">
+                <p> Tasks </p>
+                <img src="images/sidebar/account-group-outline.svg" alt="">
+                <p> Communities </p>
+                <img src="images/sidebar/cog.svg" alt="">
+                <p> Settings </p>
+                <img src="images/sidebar/face-agent.svg" alt="">
+                <p> Support </p>
+                <img src="images/sidebar/shield-account-outline.svg" alt="">
+                <p> Privacy </p>
+                <div class="empty"></div>
+                <div class="empty2"></div>
         </div>
 
         <div class="header"> 
             <div class="search">
                 <div class="search-image"><img src="images/magnify.svg" alt=""></div>
-                <div class="search-bar"></div>
+                <form action="/action_page.php">
+                    <input type="text" id="search-bar" name="search-bar"><br><br>
+                </form>
             </div>
             <div class="top-info">
                 <div class="notification"><img src="images/bell-ring.svg" alt=""></div>
@@ -58,16 +67,16 @@
         <div class="projects-grid">
             <div class="article">
                 <p class="h"> Super Cool Project</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing ept, sed do eiusmod tempor incididunt ut labore et dolore magna apqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut apquip ex ea commodo consequat.</p>
             <div class="symbols"> 
-                <img src="images/star-plus-outline.svg" alt="">
-                <img src="images/eye-plus.svg" alt="">
-                <img src="images/share-variant.svg" alt="">
+                 <img src="images/star-plus-outline.svg" alt="">
+                 <img src="images/eye-plus.svg" alt="">
+               <img src="images/share-variant.svg" alt="">
             </div>
             </div>
             <div class="article">
                 <p class="h"> Super Cool Project</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing ept, sed do eiusmod tempor incididunt ut labore et dolore magna apqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut apquip ex ea commodo consequat.</p>
             <div class="symbols"> 
                 <img src="images/star-plus-outline.svg" alt="">
                 <img src="images/eye-plus.svg" alt="">
@@ -76,7 +85,7 @@
             </div>
             <div class="article">
                  <p class="h"> Super Cool Project</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing ept, sed do eiusmod tempor incididunt ut labore et dolore magna apqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut apquip ex ea commodo consequat.</p>
             <div class="symbols"> 
                 <img src="images/star-plus-outline.svg" alt="">
                 <img src="images/eye-plus.svg" alt="">
@@ -85,7 +94,7 @@
             </div>
             <div class="article">
                  <p class="h"> Super Cool Project</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing ept, sed do eiusmod tempor incididunt ut labore et dolore magna apqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut apquip ex ea commodo consequat.</p>
             <div class="symbols"> 
                 <img src="images/star-plus-outline.svg" alt="">
                 <img src="images/eye-plus.svg" alt="">
@@ -94,7 +103,7 @@
             </div>
             <div class="article">
                  <p class="h"> Super Cool Project</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing ept, sed do eiusmod tempor incididunt ut labore et dolore magna apqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut apquip ex ea commodo consequat.</p>
             <div class="symbols"> 
                 <img src="images/star-plus-outline.svg" alt="">
                 <img src="images/eye-plus.svg" alt="">
@@ -103,7 +112,7 @@
             </div>
             <div class="article">
                  <p class="h"> Super Cool Project</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing ept, sed do eiusmod tempor incididunt ut labore et dolore magna apqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut apquip ex ea commodo consequat.</p>
             <div class="symbols"> 
                 <img src="images/star-plus-outline.svg" alt="">
                 <img src="images/eye-plus.svg" alt="">
@@ -112,7 +121,7 @@
             </div>
             <div class="article">
                  <p class="h"> Super Cool Project</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing ept, sed do eiusmod tempor incididunt ut labore et dolore magna apqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut apquip ex ea commodo consequat.</p>
             <div class="symbols"> 
                 <img src="images/star-plus-outline.svg" alt="">
                 <img src="images/eye-plus.svg" alt="">
@@ -121,7 +130,7 @@
             </div>
             <div class="article">
                  <p class="h"> Super Cool Project</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing ept, sed do eiusmod tempor incididunt ut labore et dolore magna apqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut apquip ex ea commodo consequat.</p>
             <div class="symbols"> 
                 <img src="images/star-plus-outline.svg" alt="">
                 <img src="images/eye-plus.svg" alt="">
@@ -130,7 +139,7 @@
             </div>
             <div class="article">
                  <p class="h"> Super Cool Project</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing ept, sed do eiusmod tempor incididunt ut labore et dolore magna apqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut apquip ex ea commodo consequat.</p>
             <div class="symbols"> 
                 <img src="images/star-plus-outline.svg" alt="">
                 <img src="images/eye-plus.svg" alt="">
@@ -141,13 +150,13 @@
         <div class="annoucements-grid">
             <div class="annoucements">
                 <p class="h">Site Maintance</p>
-                <p class="p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+                <p class="p">Lorem ipsum dolor sit amet, consectetur adipiscing ept, sed do eiusmod tempor incididunt ut labore et dolore magna apqua. </p>
             <hr>
             <p class="h">Site Maintance</p>
-            <p class="p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+            <p class="p">Lorem ipsum dolor sit amet, consectetur adipiscing ept, sed do eiusmod tempor incididunt ut labore et dolore magna apqua. </p>
         <hr>
             <p class="h">Site Maintance</p>
-        <p class="p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+        <p class="p">Lorem ipsum dolor sit amet, consectetur adipiscing epttt, sed do eiusmod tempor incididunt ut labore et dolore magna apqua. </p>
             </div>
             <p class="trending"> Trending</p>
             <div class="trending-grid">
@@ -166,8 +175,8 @@
                 <div class="person-desc">World peace builder</div>
                </div>
                <div class="trending-grid">
-                <img src="images/profile-photo.svg" alt="" class="person-img">
-                <div class="person-name">@tegan</div>
+                <img src="images/xxx.jpg" alt="" class="person-img">
+                <div class="person-name">@waterboss</div>
                 <div class="person-desc">World peace builder</div>
                </div>
 
@@ -175,4 +184,6 @@
     </div>
 </body>
 </html>
+
+
 
