--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="search">
                 <div class="search-image"><img src="images/magnify.svg" alt=""></div>
                 <form action="/action_page.php">
-                    <input type="text" id="search-bar" name="search-bar"><br><br>
+                    <input type="text" id="search-bar" name="search-bar" placeholder="  Search:"><br><br>
                 </form>
             </div>
             <div class="top-info">
